Update repo with readme steps and output

--- a/data_prep/01_statcast_data_preparation.ipynb
+++ b/data_prep/01_statcast_data_preparation.ipynb
@@ -49,6 +49,7 @@
     "  * Normalize pitch height based on batter height\n",
     "  * Assign batted ball type to label\n",
     "  * Reformat event\n",
+    "  * Calculate next pitch count\n",
     "\n",
     "**Notes:** \n",
     "\n",
@@ -166,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -187,8 +188,7 @@
    "outputs": [],
    "source": [
     "# set data directory\n",
-    "DATA_DIR = \"C:/Users/13202/final-project-dviz/data\"\n",
-    "OUTPUT_DATA_DIR = \"C:/Users/13202/final-project-dviz/notebooks\""
+    "DATA_DIR = \"C:/Users/13202/final-project-dataviz/data\""
    ]
   },
   {
@@ -539,17 +539,17 @@
      "output_type": "stream",
      "text": [
       "   pitch_type   Count\n",
-      "0          CH   60385\n",
+      "0          CH   60390\n",
       "1          CS      46\n",
       "2          CU   43512\n",
       "3          EP       2\n",
       "4          FA       9\n",
       "5          FC   34695\n",
-      "6          FF  167020\n",
+      "6          FF  167056\n",
       "7          FS    8061\n",
       "8          KC   11581\n",
-      "9          SI   75033\n",
-      "10         SL   84252\n"
+      "9          SI   74993\n",
+      "10         SL   84251\n"
      ]
     }
    ],
@@ -898,7 +898,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x138ef027610>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1d7a0a219a0>"
       ]
      },
      "execution_count": 20,
@@ -995,6 +995,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Batted ball type is listed as a number index and we are going to alter it to a category representation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -1018,6 +1025,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Going to change the text format for the event name."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
@@ -1025,6 +1039,30 @@
    "source": [
     "# reformat events field\n",
     "statcast_starting_pitcher_df['events'] = statcast_starting_pitcher_df['events'].str.replace(\"_\", \" \").str.capitalize()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Next Pitch Count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Getting the next pitch count to enable pitch count flow visual."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get the next count in atbats\n",
+    "statcast_starting_pitcher_df['lead_count'] = statcast_starting_pitcher_df.sort_values(['pitcher_name', 'game_pk','at_bat_number','pitch_number']).groupby(['game_pk','at_bat_number'])['count'].shift(-1)"
    ]
   },
   {
@@ -1066,7 +1104,7 @@
     "##### Save the prepped data ----\n",
     "\n",
     "# Save data\n",
-    "statcast_starting_pitcher_df.to_csv(os.path.join(OUTPUT_DATA_DIR, f'pitch_data.csv'), sep=';', index = None, header = True)"
+    "statcast_starting_pitcher_df.to_csv(os.path.join(DATA_DIR, f'pitch_data.csv'), sep=';', index = None, header = True)"
    ]
   }
  ],
